--- a/package.json
+++ b/package.json
@@ -21,13 +21,14 @@
     "url": "https://github.com/bublik1990/move-clothes/issues"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.5",
+    "parcel-bundler": "^1.12.3",
     "parcel-plugin-handlebars-precompile": "^1.0.2",
     "parcel-plugin-nuke-dist": "^1.0.1",
     "posthtml-include": "^1.6.2",
     "sass": "^1.32.8"
   },
   "dependencies": {
-    "gh-pages": "^3.2.3"
+    "gh-pages": "^3.2.3",
+    "parcel-loader-js": "^0.0.0"
   }
 }
